<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2018-2020 ThunderSoft
  All Rights Reserved by Thunder Software Technology Co., Ltd and its affiliates.
  You may not use, copy, distribute, modify, transmit in any form this file
  except in compliance with ThunderSoft in writing by applicable law.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <LinearLayout
        android:layout_width="@dimen/guide_pop_width"
        android:layout_height="@dimen/guide_pop_height"
        android:layout_gravity="center"
        android:background="@drawable/bg_pop_login"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_margin_top_1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/law_tips_1"
                android:textColor="@color/white"
                android:textSize="@dimen/tv_login_title" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/iv_close_margin_right"
                android:padding="@dimen/login_title_margin_bottom"
                android:src="@drawable/close" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_guide_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_margin_top_2"
            android:text="@string/register_title"
            android:textColor="@color/color_cursor_dark"
            android:textSize="@dimen/tv_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/guide_margin_left_1"
            android:layout_marginTop="@dimen/guide_margin_top_3"
            android:layout_marginRight="@dimen/guide_margin_right_1"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/icon_one" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/guide_margin_left_2"
                        android:text="@string/index_title_tips_1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/tv_common" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/guide_margin_left_2"
                    android:layout_marginTop="@dimen/guide_margin_top_4"
                    android:text="@string/index_tips_1"
                    android:textColor="@color/widget_text_color"
                    android:textSize="@dimen/tv_small" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/guide_margin_top_5">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/icon_two" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/guide_margin_left_2"
                        android:text="@string/index_title_tips_2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/tv_common" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/guide_margin_left_2"
                    android:layout_marginTop="@dimen/guide_margin_top_4"
                    android:text="@string/index_tips_2"
                    android:textColor="@color/widget_text_color"
                    android:textSize="@dimen/tv_small" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/guide_margin_top_5">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/icon_three" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/guide_margin_left_2"
                        android:text="@string/index_title_tips_3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/tv_common" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/guide_margin_left_2"
                    android:layout_marginTop="@dimen/guide_margin_top_4"
                    android:text="@string/index_tips_3"
                    android:textColor="@color/widget_text_color"
                    android:textSize="@dimen/tv_small" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="@dimen/guide_qr_width"
                android:layout_height="@dimen/guide_qr_width"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/guide_margin_left_3">

                <ImageView
                    android:id="@+id/iv_qr_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <FrameLayout
                    android:id="@+id/fl_qr_default"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_qr_default" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_qr_black_cover" />
                </FrameLayout>

                <ProgressBar
                    android:id="@+id/pb_loading"
                    android:layout_width="@dimen/guide_qr_refresh_width"
                    android:layout_height="@dimen/guide_qr_refresh_width"
                    android:layout_gravity="center"
                    android:indeterminateDrawable="@anim/loading"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_refresh"
                    android:layout_width="@dimen/guide_qr_refresh_width"
                    android:layout_height="@dimen/guide_qr_refresh_width"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_refresh"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <View style="@style/v_line" />

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_button_height"
            android:background="@drawable/selector_agree_bg"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/color_cursor"
            android:textSize="@dimen/tv_common" />
    </LinearLayout>
</FrameLayout>